force-app/main/default/objects/Travel_Tracker__c/Travel_Tracker__c.object-meta.xml
<CustomObject>
    <description>To be used to upload all the travel related information on the products</description>
    <label>Travel Tracker</label>
    <nameField>
        <displayFormat>QF-{YYYY}-{MM}-{0000000}</displayFormat>
        <label>Travel Tracker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Tracker</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>