force-app/main/default/objects/Travel_Tracker__c/fields/ABN__c.field-meta.xml
<CustomField>
    <fullName>ABN__c</fullName>
    <formula>Customer__r.ABN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABN</label>
    <type>Text</type>
</CustomField>