force-app/main/default/objects/Travel_Tracker__c/fields/Agency_Link__c.field-meta.xml
<CustomField>
    <fullName>Agency_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deployed as a part of JIRA CRM-3282.</description>
    <label>Agency Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Travel Tracker</relationshipLabel>
    <relationshipName>Travel_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>