force-app/main/default/objects/Travel_Tracker__c/fields/Aquire_Flight_Deal_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Aquire_Flight_Deal_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aquire Flight Deal Indicator</label>
    <type>Checkbox</type>
</CustomField>