force-app/main/default/objects/Travel_Tracker__c/fields/Business_Event_ID__c.field-meta.xml
<CustomField>
    <fullName>Business_Event_ID__c</fullName>
    <externalId>true</externalId>
    <label>Business Event ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>