force-app/main/default/objects/Travel_Tracker__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>