force-app/main/default/objects/Travel_Tracker__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Company</label>
    <referenceTo>Product_Registration__c</referenceTo>
    <relationshipLabel>Travel Tracker</relationshipLabel>
    <relationshipName>Travel_Tracker</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>