force-app/main/default/objects/Travel_Tracker__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <description>Passenger Name</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Name</label>
    <length>65</length>
    <type>Text</type>
</CustomField>