force-app/main/default/objects/Travel_Tracker__c/fields/Departure_Service_Date__c.field-meta.xml
<CustomField>
    <fullName>Departure_Service_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure / Service Date</label>
    <type>Date</type>
</CustomField>