force-app/main/default/objects/Travel_Tracker__c/fields/FF_Link__c.field-meta.xml
<CustomField>
    <fullName>FF_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Link</label>
    <referenceTo>Associated_Person__c</referenceTo>
    <relationshipLabel>Travel Tracker</relationshipLabel>
    <relationshipName>Travel_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>