force-app/main/default/objects/Travel_Tracker__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <inlineHelpText>GST in Quoted Currency</inlineHelpText>
    <label>GST</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>