force-app/main/default/objects/Travel_Tracker__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Domestic Hotel</fullName>
            </value>
            <value>
                <fullName>Excess Baggage</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>