force-app/main/default/objects/Travel_Tracker__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Provider</label>
    <length>70</length>
    <type>Text</type>
</CustomField>