force-app/main/default/objects/Travel_Tracker__c/fields/Reporting_Year__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Year__c</fullName>
    <formula>IF( RecordTypeId = &quot;012N00000000liR&quot;, YEAR( Transaction_Date__c ), YEAR( Booking_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>