force-app/main/default/objects/Travel_Tracker__c/fields/Taxes__c.field-meta.xml
<CustomField>
    <fullName>Taxes__c</fullName>
    <inlineHelpText>Taxes, Levies &amp; Surcharges in Quoted Currency</inlineHelpText>
    <label>Taxes, Levies &amp; Surcharges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>