force-app/main/default/objects/Travel_Tracker__c/fields/Ticket_Total__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Total__c</fullName>
    <formula>IF( RecordTypeId = &quot;01290000000ucrA&quot;, Base_Amount__c, Base_Amount__c  +  GST__c  +  Taxes__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>