force-app/main/default/objects/Travel_Tracker__c/fields/Ticketing_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Ticketing_Carrier__c</fullName>
    <label>Ticketing Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jetstar</fullName>
            </value>
            <value>
                <fullName>Qantas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>