force-app/main/default/objects/Travel_Tracker__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Points</fullName>
            </value>
            <value>
                <fullName>Points Plus Pay</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Refund Points</fullName>
            </value>
            <value>
                <fullName>Transaction</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>