force-app/main/default/objects/Travel_Tracker__c/fields/TY__c.field-meta.xml
<CustomField>
    <fullName>TY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TY</label>
    <length>1</length>
    <type>Text</type>
</CustomField>