force-app/main/default/objects/Travel_Tracker__c/recordTypes/Credits.recordType-meta.xml
<RecordType>
    <fullName>Credits</fullName>
    <active>true</active>
    <label>Credits</label>
</RecordType>