force-app/main/default/objects/Travel_Tracker__c/recordTypes/Flights.recordType-meta.xml
<RecordType>
    <fullName>Flights</fullName>
    <active>true</active>
    <label>Flights</label>
</RecordType>