force-app/main/default/objects/Travel_Tracker__c/recordTypes/Other_Products.recordType-meta.xml
<RecordType>
    <fullName>Other_Products</fullName>
    <active>true</active>
    <label>Other Products</label>
</RecordType>